# rancher-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/rancher_mcp/: __init__.py  client.py  server.py
tests/: test_server.py
