[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rancher-mcp-server"
version = "0.1.0"
description = "MCP server that exposes Rancher clusters as tools for AI assistants (SRE copilot)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Flávia Gaia" }]
dependencies = [
    "mcp>=1.2,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
rancher-mcp-server = "rancher_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
